@@ -8,7 +8,8 @@ or density.}
 dsm(formula, ddf.obj, segment.data, observation.data, engine = "gam",
   convert.units = 1, family = quasipoisson(link = "log"), group = FALSE,
   gamma = 1.4, control = list(keepData = TRUE), availability = 1,
-  strip.width = NULL, segment.area = NULL, weights = NULL, ...)
+  strip.width = NULL, segment.area = NULL, weights = NULL,
+  transect = "line", ...)
 }
 \arguments{
 \item{formula}{formula for the surface. This should be a valid \code{\link{glm}}/\code{\link{gam}}/\code{\link{gamm}} formula. See "Details", below, for how to define the response.}
@@ -38,6 +39,8 @@ dsm(formula, ddf.obj, segment.data, observation.data, engine = "gam",
 \item{segment.area}{if `NULL` (default) segment areas will be calculated by multiplying the `Effort` column in `segment.data` by the (right minus left) truncation distance for the `ddf.obj` or by `strip.width`. Alternatively a vector of segment areas can be provided (which must be the same length as the number of rows in `segment.data`) or a character string giving the name of a column in `segment.data` which contains the areas. If \code{segment.area} is specified it takes precident.}
 
 \item{weights}{weights for each observation used in model fitting. The default, \code{weights=NULL}, weights each observation by its area (see Details). Setting a scalar value (e.g. \code{weights=1}) all observations are equally weighted.}
+
+\item{transect}{type of transect (\code{"line"}, the default or \code{"point"}). This is overridden by the detection function transect type, this is usually only necessary when no detection function is specified.}
 
 \item{\dots}{anything else to be passed straight to \code{\link{glm}}/\code{\link{gam}}/\code{\link{gamm}}/\code{\link{bam}}.}
 }
